@@ -50,12 +50,18 @@ protected Map getCompilerOptions() {
 	return options;
 }
 public static Test suite() {
-		return buildUniqueComplianceTestSuite(testClass(), ClassFileConstants.JDK1_3);
+		return buildUniqueComplianceTestSuite(testClass(), CompilerOptions.getFirstSupportedJdkLevel());
 }
 public static Class testClass() {
 	return Compliance_1_3.class;
 }
-
+// Use this static initializer to specify subset for tests
+// All specified tests which does not belong to the class are skipped...
+static {
+//		TESTS_NAMES = new String[] { "Bug58069" };
+//		TESTS_NUMBERS = new int[] { 104 };
+//		TESTS_RANGE = new int[] { 76, -1 };
+}
 /* (non-Javadoc)
  * @see junit.framework.TestCase#setUp()
  */
@@ -111,22 +117,39 @@ public void test011() {
 			"	}	\n" +
 			"} \n"
 		},
-		"----------\n" +
-		"1. ERROR in p1\\X.java (at line 5)\n" +
-		"	while (false) System.out.println(\"unreachable\");	\n" +
-		"	              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
-		"Unreachable code\n" +
-		"----------\n" +
-		"2. ERROR in p1\\X.java (at line 9)\n" +
-		"	for (;false;) System.out.println(\"unreachable\");	\n" +
-		"	              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
-		"Unreachable code\n" +
-		"----------\n" +
-		"3. WARNING in p1\\X.java (at line 11)\n" +
-		"	if (false)System.out.println(\"unreachable\");		\n" +
-		"	          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
-		"Dead code\n" +
-		"----------\n");
+		"""
+		----------
+		1. ERROR in p1\\X.java (at line 4)
+			while (false);\t
+			             ^
+		Unreachable code
+		----------
+		2. ERROR in p1\\X.java (at line 5)
+			while (false) System.out.println("unreachable");\t
+			              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+		Unreachable code
+		----------
+		3. ERROR in p1\\X.java (at line 8)
+			for (;false;);\t
+			             ^
+		Unreachable code
+		----------
+		4. ERROR in p1\\X.java (at line 9)
+			for (;false;) System.out.println("unreachable");\t
+			              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+		Unreachable code
+		----------
+		5. WARNING in p1\\X.java (at line 10)
+			if (false);\t
+			          ^
+		Dead code
+		----------
+		6. WARNING in p1\\X.java (at line 11)
+			if (false)System.out.println("unreachable");\t\t
+			          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+		Dead code
+		----------
+		""");
 }
 // binary compatibility
 public void test012() {
@@ -202,17 +225,17 @@ public void test012() {
 			"} \n"
 		},
 		"*** FIELD ACCESS ***"
-		+"*1* new Updated().bar: Top.bar"
-		+"*2* new Updated().foo: Top.foo"
-		+"*3* new Y().foo: Top.foo"
-		+"*4* new Y().bar: Top.bar"
-		+"*5* bar: Top.bar"
-		+"*6* foo: Top.foo"
-		+"*7* Y.bar: Top.bar"
-		+"*8* this.bar: Top.bar"
-		+"*9* this.foo: Top.foo"
-		+"*10* store.value: Top.store"
-		+"*11* sstore.value: Top.sstore"
+		+"*1* new Updated().bar: Updated.bar"
+		+"*2* new Updated().foo: Updated.foo"
+		+"*3* new Y().foo: Updated.foo"
+		+"*4* new Y().bar: Updated.bar"
+		+"*5* bar: Updated.bar"
+		+"*6* foo: Updated.foo"
+		+"*7* Y.bar: Updated.bar"
+		+"*8* this.bar: Updated.bar"
+		+"*9* this.foo: Updated.foo"
+		+"*10* store.value: Updated.store"
+		+"*11* sstore.value: Updated.sstore"
 		+"*12* ss.sstore.value: Top.sstore",
 		null, // use default class-path
 		false, // do not flush previous output dir content
@@ -280,14 +303,14 @@ public void test013() {
 			"} \n"
 		},
 		"*** METHOD ACCESS ***"
-		+"*1* new Updated().bar(): Top.bar()"
+		+"*1* new Updated().bar(): Updated.bar()"
 		+"*2* new Updated().foo(): Updated.foo()"
 		+"*3* new Y().foo(): Updated.foo()"
-		+"*4* new Y().bar(): Top.bar()"
-		+"*5* bar(): Top.bar()"
+		+"*4* new Y().bar(): Updated.bar()"
+		+"*5* bar(): Updated.bar()"
 		+"*6* foo(): Updated.foo()"
-		+"*7* Y.bar(): Top.bar()"
-		+"*8* this.bar(): Top.bar()"
+		+"*7* Y.bar(): Updated.bar()"
+		+"*8* this.bar(): Updated.bar()"
 		+"*9* this.foo(): Updated.foo()",
 		null, // use default class-path
 		false, // do not flush previous output dir content
@@ -331,27 +354,7 @@ public void test014() {
 			"	}	\n" +
 			"}	\n"
 		},
-		"----------\n" +
-		"1. ERROR in p1\\X.java (at line 25)\n" +
-		"	foo(true);	\n" +
-		"	^^^\n" +
-		"The method foo is defined in an inherited type and an enclosing scope\n" +
-		"----------\n" +
-		"2. ERROR in p1\\X.java (at line 26)\n" +
-		"	System.out.print((boolean)bar + \"#\");	\n" +
-		"	                          ^^^\n" +
-		"The field bar is defined in an inherited type and an enclosing scope \n" +
-		"----------\n" +
-		"3. ERROR in p1\\X.java (at line 27)\n" +
-		"	Member m = new Member();	\n" +
-		"	^^^^^^\n" +
-		"The type Member is defined in an inherited type and an enclosing scope\n" +
-		"----------\n" +
-		"4. ERROR in p1\\X.java (at line 27)\n" +
-		"	Member m = new Member();	\n" +
-		"	               ^^^^^^\n" +
-		"The type Member is defined in an inherited type and an enclosing scope\n" +
-		"----------\n"
+		""
 	);
 }
 
@@ -426,12 +429,7 @@ public void test017() {
 			"      }	\n"+
 			"} 	\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 9)\n" +
-		"	foo(false); 	\n" +
-		"	^^^\n" +
-		"The method foo is defined in an inherited type and an enclosing scope\n" +
-		"----------\n");
+		"");
 }
 
 public void test018() {
@@ -452,12 +450,7 @@ public void test018() {
 			"      }	\n"+
 			"} 	\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 9)\n" +
-		"	foo(0); 	\n" +
-		"	^^^\n" +
-		"The method foo is defined in an inherited type and an enclosing scope\n" +
-		"----------\n");
+		"");
 }
 public void test019() {
 	this.runConformTest(
@@ -532,15 +525,10 @@ public void test020a() {
 			"      }	\n"+
 			"} 	\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 11)\r\n" +
-		"	foo(new X()); 	\r\n" +
-		"	^^^\n" +
-		"The method foo is defined in an inherited type and an enclosing scope\n" +
-		"----------\n");
+		"");
 }
 // binary check for 11511
-public void test021() {
+public void _test021() {
 	this.runConformTest(
 		new String[] {
 			"p1/Z.java",
@@ -618,11 +606,6 @@ public void test022() {
 		"	foo(0); // should say that foo(int, boolean) isn\'t applicable	\n" +
 		"	^^^\n" +
 		"The method foo(int, boolean) in the type TT is not applicable for the arguments (int)\n" +
-		"----------\n" +
-		"2. ERROR in p1\\T.java (at line 20)\n" +
-		"	foo(true); // should complain ambiguity	\n" +
-		"	^^^\n" +
-		"The method foo is defined in an inherited type and an enclosing scope\n" +
 		"----------\n");
 }
 
@@ -665,11 +648,6 @@ public void test023() {
 		"	foo(0); // should say that foo(int, boolean) isn\'t applicable	\n" +
 		"	^^^\n" +
 		"The method foo(int, boolean) in the type TT is not applicable for the arguments (int)\n" +
-		"----------\n" +
-		"2. ERROR in p1\\T.java (at line 20)\n" +
-		"	foo(true); // should complain ambiguity	\n" +
-		"	^^^\n" +
-		"The method foo is defined in an inherited type and an enclosing scope\n" +
 		"----------\n");
 }
 /*
@@ -724,13 +702,7 @@ public void test024() {
 		"2. ERROR in p1\\X.java (at line 22)\n" +
 		"	foo(0); // should say that foo(boolean) isn\'t applicable	\n" +
 		"	^^^\n" +
-		"The method foo(boolean) in the type TT is not applicable for the arguments (int)\n" +
-		"----------\n" +
-		"3. ERROR in p1\\X.java (at line 29)\n" +
-		"	foo(true); // should complain ambiguity	\n" +
-		"	^^^\n" +
-		"The method foo is defined in an inherited type and an enclosing scope\n" +
-		"----------\n");
+		"The method foo(boolean) in the type TT is not applicable for the arguments (int)\n");
 }
 /*
  * http://bugs.eclipse.org/bugs/show_bug.cgi?id=11511
@@ -762,7 +734,7 @@ public void test025() {
 		"2. ERROR in p1\\X.java (at line 4)\n" +
 		"	init(\"hello\");	\n" +
 		"	^^^^\n" +
-		"The method init(String, int) in the type AbstractY is not applicable for the arguments (String)\n" +
+		"The method init(String, int) in the type I is not applicable for the arguments (String)\n" +
 		"----------\n");
 }
 
@@ -807,7 +779,7 @@ public void test026() {
  */
 public void test027() {
 
-	this.runConformTest(
+	this.runNegativeTest(
 		new String[] {
 			"p1/X.java",
 			"package p1;	\n"+
@@ -821,7 +793,19 @@ public void test027() {
 			"	}	\n"+
 			"}	\n"
 		},
-		"SUCCESS");
+		"""
+		----------
+		1. WARNING in p1\\X.java (at line 4)
+			for (;false;p());\t
+			            ^^^
+		Dead code
+		----------
+		2. ERROR in p1\\X.java (at line 4)
+			for (;false;p());\t
+			                ^
+		Unreachable code
+		----------
+		""");
 }
 /*
  * http://bugs.eclipse.org/bugs/show_bug.cgi?id=12445
@@ -932,18 +916,25 @@ public void test030() {
 			"	protected void baz(String s) {	System.out.println(\"X2.baz(String)\"); }	\n" +
 			"}	\n",
 		},
-		"----------\n" +
-		"1. ERROR in p\\X.java (at line 6)\n" +
-		"	new q.X2().barbar(\"String\");	\n" +
-		"	           ^^^^^^\n" +
-		"The method barbar(Object) from the type X2 is not visible\n" +
-		"----------\n" +
-		"----------\n" +
-		"1. WARNING in q\\X2.java (at line 5)\n" +
-		"	void barbar(Object o){	System.out.println(\"X2.barbar(Object)\"); }	\n" +
-		"	     ^^^^^^^^^^^^^^^^\n" +
-		"The method X2.barbar(Object) does not override the inherited method from X1 since it is private to a different package\n" +
-		"----------\n");
+		"""
+		----------
+		1. ERROR in p\\X.java (at line 5)
+			new q.X2().bar("String");\t
+			           ^^^
+		The method bar(Object) from the type X2 is not visible
+		----------
+		2. ERROR in p\\X.java (at line 6)
+			new q.X2().barbar("String");\t
+			           ^^^^^^
+		The method barbar(Object) from the type X2 is not visible
+		----------
+		----------
+		1. WARNING in q\\X2.java (at line 5)
+			void barbar(Object o){	System.out.println("X2.barbar(Object)"); }\t
+			     ^^^^^^^^^^^^^^^^
+		The method X2.barbar(Object) does not override the inherited method from X1 since it is private to a different package
+		----------
+		""");
 }
 
 /*
@@ -1096,7 +1087,7 @@ public void test033() {
 			"  }	\n"+
 			"}	\n"
 		},
-		"SyntheticInit AFTER SuperConstructorCall");
+		"0\nSyntheticInit BEFORE SuperConstructorCall");
 }
 
 /*
@@ -1132,7 +1123,7 @@ public void test034() {
 			"	}	\n"+
 			"}\n",
 		},
-		"X.this == null-X$1.baz()");
+		"X.this != null-X$1.baz()");
 }
 
 public void test035() {
@@ -1155,7 +1146,7 @@ public void test035() {
 			"	}	\n"+
 			"}	\n",
 		},
-		"SUCCESS:2"
+		"FAILED"
 	);
 }
 
@@ -1182,7 +1173,7 @@ public void test036() {
 			"	}	\n"+
 			"}	\n",
 		},
-		"SUCCESS"
+		"FAILED"
 	);
 }
 
@@ -1240,7 +1231,7 @@ public void test038() {
  * unreachable empty statement/block not diagnosed in 1.3
  */
 public void test039() {
-	this.runConformTest(
+	this.runNegativeTest(
 		new String[] {
 			"X.java",
 			"public class X {	\n" +
@@ -1257,7 +1248,39 @@ public void test039() {
 			"	}	\n"+
 			"}	\n",
 		},
-		"SUCCESS");
+		"""
+		----------
+		1. ERROR in X.java (at line 5)
+			for (;false;);\t
+			             ^
+		Unreachable code
+		----------
+		2. ERROR in X.java (at line 6)
+			for (;false;){}\t
+			             ^^
+		Unreachable code
+		----------
+		3. ERROR in X.java (at line 7)
+			while (false);\t
+			             ^
+		Unreachable code
+		----------
+		4. ERROR in X.java (at line 8)
+			while (false){}\t
+			             ^^
+		Unreachable code
+		----------
+		5. WARNING in X.java (at line 9)
+			if (false) {} else {}\t
+			           ^^
+		Dead code
+		----------
+		6. WARNING in X.java (at line 10)
+			if (false) ; else ;\t\t\t
+			           ^
+		Dead code
+		----------
+		""");
 }
 
 // jls6.5.5.1 - simple type names favor member type over toplevel one.
@@ -1291,19 +1314,9 @@ public void test040() {
 		"2. ERROR in X.java (at line 6)\n" +
 		"	class Y extends Homonym {};	\n" +
 		"	                ^^^^^^^\n" +
-		"The type Homonym is defined in an inherited type and an enclosing scope\n" +
-		"----------\n" +
-		"3. ERROR in X.java (at line 6)\n" +
-		"	class Y extends Homonym {};	\n" +
-		"	                ^^^^^^^\n" +
 		"The type X.Homonym cannot be the superclass of Y; a superclass must be a class\n" +
 		"----------\n" +
-		"4. ERROR in X.java (at line 13)\n" +
-		"	class Y extends Homonym {};	\n" +
-		"	                ^^^^^^^\n" +
-		"The type Homonym is defined in an inherited type and an enclosing scope\n" +
-		"----------\n" +
-		"5. ERROR in X.java (at line 13)\n" +
+		"3. ERROR in X.java (at line 13)\n" +
 		"	class Y extends Homonym {};	\n" +
 		"	                ^^^^^^^\n" +
 		"The type X.Homonym cannot be the superclass of Y; a superclass must be a class\n" +
@@ -1449,7 +1462,7 @@ public void test044() throws Exception {
 			ClassFileBytesDisassembler.DETAILED);
 
 	String expectedOutput =
-		"     1  invokevirtual java.lang.Object.clone() : java.lang.Object [16]\n";
+		"     1  invokevirtual java.lang.String[].clone() : java.lang.Object [16]\n";
 
 	int index = actualOutput.indexOf(expectedOutput);
 	if (index == -1 || expectedOutput.length() == 0) {
@@ -1462,7 +1475,7 @@ public void test044() throws Exception {
 
 // 39172
 public void test045() {
-	this.runConformTest(
+	this.runNegativeTest(
 		new String[] {
 			"p/X.java",
 			"package p;	\n" +
@@ -1473,7 +1486,14 @@ public void test045() {
 			"	}	\n" +
 			"}	\n"
 		},
-		"SUCCESS"
+		"""
+		----------
+		1. ERROR in p\\X.java (at line 5)
+			return;;\t
+			       ^
+		Unreachable code
+		----------
+		"""
 	);
 }
 /**
@@ -1580,7 +1600,7 @@ public void test048() {
  * http://bugs.eclipse.org/bugs/show_bug.cgi?id=41278
  */
 public void test049() {
-	this.runConformTest(
+	this.runNegativeTest(
 		new String[] {
 			"pa/Caller.java",
 			"package pa;\n" +
@@ -1605,11 +1625,18 @@ public void test049() {
 			"	protected void callme(){	System.out.println(\"SUCCESS\"); }\n" +
 			"}\n",
 		},
-		"SUCCESS");
+		"""
+		----------
+		1. ERROR in pa\\Caller.java (at line 7)
+			aConcrete.callme();
+			          ^^^^^^
+		The method callme() from the type Concrete is not visible
+		----------
+		""");
 }
 
 public void test050() {
-	this.runConformTest(new String[] {
+	this.runNegativeTest(new String[] {
 		"p/X.java",
 		"package p;\n" +
 		"public class X {\n" +
@@ -1624,11 +1651,19 @@ public void test050() {
 		"     a2 = 2;\n" +
 		"  }\n" +
 		"}\n",
-	});
+	},
+	"""
+	----------
+	1. ERROR in p\\X.java (at line 10)
+		while (false) {};
+		              ^^
+	Unreachable code
+	----------
+	""");
 }
 
 public void test051() {
-	this.runConformTest(new String[] {
+	this.runNegativeTest(new String[] {
 		"p/X.java",
 		"package p;\n" +
 		"public class X {\n" +
@@ -1643,7 +1678,15 @@ public void test051() {
 		"     a2 = 2;\n" +
 		"  }\n" +
 		"}\n",
-	});
+	},
+	"""
+	----------
+	1. ERROR in p\\X.java (at line 10)
+		while (false);
+		             ^
+	Unreachable code
+	----------
+	""");
 }
 
 public void test052() {
@@ -1684,7 +1727,16 @@ public void test052() {
 		"	int x = i;\n" +
 		"	        ^\n" +
 		"Cannot make a static reference to the non-static field i\n" +
-		"----------\n");
+		"----------\n" +
+		"""
+		----------
+		1. ERROR in p\\X.java (at line 10)
+			while (false);
+			             ^
+		Unreachable code
+		----------
+				"""
+		);
 }
 
 public void test053() {
@@ -1711,12 +1763,7 @@ public void test053() {
 			"  }\n" +
 			"}",
 		},
-		"----------\n" +
-		"1. ERROR in p\\X.java (at line 13)\n" +
-		"	return new I() {\n" +
-		"	           ^\n" +
-		"The type I is defined in an inherited type and an enclosing scope\n" +
-		"----------\n"
+		""
 	);
 }
 
@@ -1751,12 +1798,7 @@ public void test054() {
 			"}\n" +
 			"}",
 		},
-		"----------\n" +
-		"1. ERROR in p\\X.java (at line 15)\n" +
-		"	new I() {\n" +
-		"	    ^\n" +
-		"The type I is defined in an inherited type and an enclosing scope\n" +
-		"----------\n"
+		""
 	);
 }
 public void test055() {
@@ -1800,11 +1842,6 @@ public void test055() {
 		"	public void foo(int a) {\n" +
 		"	                    ^\n" +
 		"The parameter a is hiding a field from type X.I1\n" +
-		"----------\n" +
-		"3. ERROR in p\\X.java (at line 17)\n" +
-		"	System.out.println(\"X$1::foo-\" + a);\n" +
-		"	                                 ^\n" +
-		"The field a is defined in an inherited type and an enclosing scope \n" +
 		"----------\n"
 	);
 }
@@ -1826,12 +1863,7 @@ public void test056() {
 			"  }  \n" +
 			"}",
 		},
-		"----------\n" +
-		"1. ERROR in p\\MethodQualification.java (at line 8)\n" +
-		"	new MethodQualification () { {foo();} };\n" +
-		"	                              ^^^\n" +
-		"The method foo is defined in an inherited type and an enclosing scope\n" +
-		"----------\n"
+		""
 	);
 }
 
@@ -1861,12 +1893,7 @@ public void test057() {
 			"  }\n" +
 			"}",
 		},
-		"----------\n" +
-		"1. ERROR in p\\AG.java (at line 12)\n" +
-		"	int i = new B().intValueOfB; //HERE ERROR SHOULD BE DETECTED\n" +
-		"	            ^\n" +
-		"The type B is defined in an inherited type and an enclosing scope\n" +
-		"----------\n"
+		""
 	);
 }
 
@@ -1892,12 +1919,7 @@ public void test058() {
 			"  }\n" +
 			"}",
 		},
-		"----------\n" +
-		"1. ERROR in p\\AE.java (at line 10)\n" +
-		"	int i = intValue; //HERE THE ERROR - SHOULD HAVE A QUALIFICATION\n" +
-		"	        ^^^^^^^^\n" +
-		"The field intValue is defined in an inherited type and an enclosing scope \n" +
-		"----------\n"
+		""
 	);
 }
 
@@ -1928,11 +1950,6 @@ public void test059() {
 		"	String field = \"Enclosing field for anonymous type\";\n" +
 		"	       ^^^^^\n" +
 		"The field Local.field is hiding a field from type FieldQualification\n" +
-		"----------\n" +
-		"2. ERROR in p\\FieldQualification.java (at line 11)\n" +
-		"	System.out.println(field);\n" +
-		"	                   ^^^^^\n" +
-		"The field field is defined in an inherited type and an enclosing scope \n" +
 		"----------\n"
 	);
 }
@@ -1963,12 +1980,7 @@ public void test060() {
 			"  }\n" +
 			"}",
 		},
-		"----------\n" +
-		"1. ERROR in p\\AF.java (at line 12)\n" +
-		"	int i = intMethod(); //ERROR HERE SHOULD BE DETECTED\n" +
-		"	        ^^^^^^^^^\n" +
-		"The method intMethod is defined in an inherited type and an enclosing scope\n" +
-		"----------\n"
+		""
 	);
 }
 
@@ -1993,12 +2005,7 @@ public void test061() {
 			"	public static class Z {}	\n" +
 			"}	\n"
 		},
-		"----------\n" +
-		"1. ERROR in p\\X.java (at line 6)\n" +
-		"	Z someField;	\n" +
-		"	^\n" +
-		"The type Z is defined in an inherited type and an enclosing scope\n" +
-		"----------\n");
+		"");
 }
 
 /*
@@ -2026,7 +2033,7 @@ public void test062() {
 		"1. ERROR in p1\\Y.java (at line 4)\n" +
 		"	super.init();	\n" +
 		"	^^^^^^^^^^^^\n" +
-		"Cannot directly invoke the abstract method init() for the type AbstractT\n" +
+		"Cannot directly invoke the abstract method init() for the type J\n" +
 		"----------\n"); // expected log
 }
 
@@ -2123,7 +2130,7 @@ public void test066() {
 		"----------\n" +
 		"1. ERROR in X.java (at line 8)\n" +
 		"	super(new M(){});\n" +
-		"	      ^^^^^^^^^\n" +
+		"	          ^^^\n" +
 		"No enclosing instance of type X is available due to some intermediate constructor invocation\n" +
 		"----------\n");
 }
@@ -2255,7 +2262,7 @@ public void test070() {
 			"	String field = \"Middle.field\";\n" +
 			"}\n"
 		},
-		"Top.field",
+		"Middle.field",
 		null, // use default class-path
 		false, // do not flush previous output dir content
 		null); // no special vm args
@@ -2323,12 +2330,7 @@ public void test072() {
 			"    }\n" +
 			"}",
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 12)\n" +
-		"	if (true) throw null;\n" +
-		"	                ^^^^\n" +
-		"Cannot throw null as an exception\n" +
-		"----------\n");
+		"");
 }
 
 // 52221
@@ -2361,12 +2363,14 @@ public void test073() {
 			"    }\n" +
 			"}\n",
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 18)\n" +
-		"	class Local { // not a duplicate\n" +
-		"	      ^^^^^\n" +
-		"Duplicate nested type Local\n" +
-		"----------\n");
+		"""
+		----------
+		1. ERROR in X.java (at line 14)
+			System.out.println(new Local());
+			                       ^^^^^
+		Local cannot be resolved to a type
+		----------
+		""");
 }
 
 // checking for captured outer local initialization status
@@ -2401,21 +2405,19 @@ public void test074() {
 			"    }	\n" +
 			"}	\n",
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 15)\n" +
-		"	System.out.print(new Local());	\n" +
-		"	                 ^^^^^^^^^^^\n" +
-		"The local variable displayString may not have been initialized\n" +
-		"----------\n" +
-		"2. ERROR in X.java (at line 17)\n" +
-		"	System.out.println(new Local(){	\n" +
-		"					public String toString() {	\n" +
-		"						return super.toString()+\": anonymous\";	\n" +
-		"					}	\n" +
-		"				});	\n" +
-		"	                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
-		"The local variable displayString may not have been initialized\n" +
-		"----------\n");
+		"""
+		----------
+		1. ERROR in X.java (at line 15)
+			System.out.print(new Local());\t
+			                     ^^^^^
+		Local cannot be resolved to a type
+		----------
+		2. ERROR in X.java (at line 17)
+			System.out.println(new Local(){\t
+			                       ^^^^^
+		Local cannot be resolved to a type
+		----------
+		""");
 }
 public void test075() {
 	this.runNegativeTest(
@@ -2431,12 +2433,7 @@ public void test075() {
 			"    public void test() { foo((short) 1); } \n" +
 			"}	\n",
 		},
-		"----------\n" +
-		"1. ERROR in Y.java (at line 3)\r\n" +
-		"	public void test() { foo((short) 1); } \r\n" +
-		"	                     ^^^\n" +
-		"The method foo(long) is ambiguous for the type Y\n" +
-		"----------\n");
+		"");
 }
 /**
  * Test fix bug 58069 for type.
@@ -2478,7 +2475,7 @@ public void test076() {
 		"2. ERROR in X.java (at line 5)\n" +
 		"	* @throws Problem \n" +
 		"	          ^^^^^^^\n" +
-		"Javadoc: The type Problem is defined in an inherited type and an enclosing scope\n" +
+		"Javadoc: Exception Problem is not declared\n" +
 		"----------\n"
 	);
 }
@@ -2513,12 +2510,7 @@ public void test077() {
 			"	String bar(){ return \"FAILED\"; } \n" +
 			"} \n"
 		},
-		"----------\n" +
-		"1. ERROR in p1\\Test.java (at line 13)\n" +
-		"	String z = bar();	\n" +
-		"	           ^^^\n" +
-		"The method bar is defined in an inherited type and an enclosing scope\n" +
-		"----------\n"
+		""
 	);
 }
 /**
@@ -2550,21 +2542,64 @@ public void test078() {
 			"	String bar = \"FAILED\"; \n" +
 			"} \n"
 		},
-		"----------\n" +
-		"1. ERROR in p1\\Test.java (at line 10)\n" +
-		"	String z = bar; \n" +
-		"	           ^^^\n" +
-		"The field bar is defined in an inherited type and an enclosing scope \n" +
-		"----------\n"
+		""
 	);
 }
 /*
  * https://bugs.eclipse.org/bugs/show_bug.cgi?id=47227
  */
 public void test079() {
+
+	String problemLog = (this.complianceLevel >= ClassFileConstants.JDK22) ?
+			"""
+			----------
+			1. ERROR in X.java (at line 1)
+				void ___eval() {
+				^
+			Implicitly Declared Classes and Instance Main Methods is a preview feature and disabled by default. Use --enable-preview to enable
+			----------
+			2. ERROR in X.java (at line 1)
+				void ___eval() {
+				^
+			Implicitly declared class must have a candidate main method
+			----------
+			3. ERROR in X.java (at line 4)
+				return blah;
+				       ^^^^
+			blah cannot be resolved to a variable
+			----------
+			""" :
+			"""
+			----------
+			1. ERROR in X.java (at line 1)
+				void ___eval() {
+				^
+			The preview feature Implicitly Declared Classes and Instance Main Methods is only available with source level 22 and above
+			----------
+			2. ERROR in X.java (at line 1)
+				void ___eval() {
+				^
+			Implicitly declared class must have a candidate main method
+			----------
+			3. ERROR in X.java (at line 4)
+				return blah;
+				       ^^^^
+			blah cannot be resolved to a variable
+			----------
+			""";
+
+	if (this.complianceLevel < ClassFileConstants.JDK16) {
+		problemLog += """
+			4. ERROR in X.java (at line 14)
+				public static void main(String[] args) {
+				                   ^^^^^^^^^^^^^^^^^^^
+			The method main cannot be declared static; static methods can only be declared in a static or top level type
+			----------
+			""";
+	}
 	this.runNegativeTest(
 		new String[] {
-			"Hello.java",
+			"X.java",
 			"void ___eval() {\n" +
 			"	new Runnable() {\n" +
 			"		int ___run() throws Throwable {\n" +
@@ -2589,29 +2624,7 @@ public void test079() {
 			"	}\n" +
 			"}\n"
 		},
-		"""
-		----------
-		1. ERROR in Hello.java (at line 1)
-			void ___eval() {
-			^
-		The preview feature Implicitly Declared Classes and Instance Main Methods is only available with source level 22 and above
-		----------
-		2. ERROR in Hello.java (at line 1)
-			void ___eval() {
-			^
-		Implicitly declared class must have a candidate main method
-		----------
-		3. ERROR in Hello.java (at line 4)
-			return blah;
-			       ^^^^
-		blah cannot be resolved to a variable
-		----------
-		4. ERROR in Hello.java (at line 14)
-			public static void main(String[] args) {
-			                   ^^^^^^^^^^^^^^^^^^^
-		The method main cannot be declared static; static methods can only be declared in a static or top level type
-		----------
-		"""
+		problemLog
 	);
 }
 /*
@@ -2645,11 +2658,18 @@ public void test080() {
 		"	                     ^^\n" +
 		"The serializable class C2 does not declare a static final serialVersionUID field of type long\n" +
 		"----------\n" +
-		"3. ERROR in X.java (at line 8)\n" +
-		"	ArrayList list = args == null ? new C1(): new C2();\n" +
-		"	                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
-		"Incompatible conditional operand types X.C1 and X.C2\n" +
-		"----------\n");
+		"""
+		3. WARNING in X.java (at line 8)
+			ArrayList list = args == null ? new C1(): new C2();
+			                                ^^^^^^^^
+		Access to enclosing constructor X.C1() is emulated by a synthetic accessor method
+		----------
+		4. WARNING in X.java (at line 8)
+			ArrayList list = args == null ? new C1(): new C2();
+			                                          ^^^^^^^^
+		Access to enclosing constructor X.C2() is emulated by a synthetic accessor method
+		----------
+				""");
 }
 public void test081() {
 	this.runNegativeTest(
@@ -2662,12 +2682,7 @@ public void test081() {
 			"    public Y foo() { return this; } \n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 5)\n" +
-		"	public Y foo() { return this; } \n" +
-		"	       ^\n" +
-		"The return type is incompatible with X.foo()\n" +
-		"----------\n");
+		"");
 }
 // covariance
 public void test082() {
@@ -2691,12 +2706,7 @@ public void test082() {
 			"	}\n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 13)\n" +
-		"	String foo() {\n" +
-		"	^^^^^^\n" +
-		"The return type is incompatible with X.foo()\n" +
-		"----------\n");
+		"");
 }
 /*
  * https://bugs.eclipse.org/bugs/show_bug.cgi?id=66533
@@ -2712,10 +2722,10 @@ public void test084() {
 			"}\n"
 		},
 		"----------\n" +
-		"1. WARNING in X.java (at line 3)\n" +
+		"1. ERROR in X.java (at line 3)\n" +
 		"	Object enum = null;\n" +
 		"	       ^^^^\n" +
-		"\'enum\' should not be used as an identifier, since it is a reserved keyword from source level 1.5 on\n" +
+		"Syntax error on token \"enum\", delete this token\n" +
 		"----------\n");
 }
 /**
@@ -2737,22 +2747,19 @@ public void test085() {
 				"	public static int in;\n" +
 				"}\n"
 		},
-		"----------\n" +
-			"1. ERROR in A.java (at line 1)\n" +
-			"	import static j.l.S.*;\n" +
-			"	^^^^^^^^^^^^^^^^^^^^^^\n" +
-			"Syntax error, static imports are only available if source level is 1.5 or greater\n" +
-			"----------\n" +
-			"2. ERROR in A.java (at line 2)\n" +
-			"	import static j.l.S.in;\n" +
-			"	^^^^^^^^^^^^^^^^^^^^^^^\n" +
-			"Syntax error, static imports are only available if source level is 1.5 or greater\n" +
-			"----------\n" +
-			"3. ERROR in A.java (at line 2)\n" +
-			"	import static j.l.S.in;\n" +
-			"	              ^^^^^^^^\n" +
-			"The import j.l.S.in cannot be resolved\n" +
-			"----------\n"
+		"""
+		----------
+		1. WARNING in A.java (at line 1)
+			import static j.l.S.*;
+			              ^^^^^
+		The import j.l.S is never used
+		----------
+		2. WARNING in A.java (at line 2)
+			import static j.l.S.in;
+			              ^^^^^^^^
+		The import j.l.S.in is never used
+		----------
+		"""
 		);
 }
 /**
@@ -2779,8 +2786,8 @@ public void test086() {
 		"----------\n" +
 			"1. ERROR in X.java (at line 1)\n" +
 			"	import static p.S;\n" +
-			"	^^^^^^^^^^^^^^^^^^\n" +
-			"Syntax error, static imports are only available if source level is 1.5 or greater\n" +
+			"	              ^^^\n" +
+			"The static import p.S must be a field or member type\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 5)\n" +
 			"	System.out.print(full+\" \"+p.S.success);\n" +
@@ -2809,8 +2816,8 @@ public void test087() {
 		"----------\n" +
 			"1. ERROR in X.java (at line 1)\n" +
 			"	import static S;\n" +
-			"	^^^^^^^^^^^^^^^^\n" +
-			"Syntax error, static imports are only available if source level is 1.5 or greater\n" +
+			"	              ^\n" +
+			"The import S cannot be resolved\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 5)\n" +
 			"	System.out.print(full+\" \"+S.success);\n" +
@@ -2881,7 +2888,19 @@ public void test088() {
 		"	this.super();\n" +
 		"	^^^^\n" +
 		"Illegal enclosing instance specification for type Object\n" +
-		"----------\n");
+		"----------\n" +
+		"""
+		3. WARNING in p\\X.java (at line 39)
+			Method _getMethod = c.getMethod("d",null);
+			                    ^^^^^^^^^^^^^^^^^^^^^
+		Type null of the last argument to method getMethod(String, Class...) doesn't exactly match the vararg parameter type. Cast to Class[] to confirm the non-varargs invocation, or pass individual arguments of type Class for a varargs invocation.
+		----------
+		4. WARNING in p\\X.java (at line 39)
+			Method _getMethod = c.getMethod("d",null);
+			                    ^^^^^^^^^^^^^^^^^^^^^
+		Type safety: The method getMethod(String, Class...) belongs to the raw type Class. References to generic type Class<T> should be parameterized
+		----------
+		""");
 }
 /*
  * https://bugs.eclipse.org/bugs/show_bug.cgi?id=78089
@@ -2900,12 +2919,7 @@ public void test089() {
 			"    }\n" +
 			"}"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 2)\n" +
-		"	@interface I1 {}\n" +
-		"	           ^^\n" +
-		"Syntax error, annotation declarations are only available if source level is 1.5 or greater\n" +
-		"----------\n");
+		"");
 }
 //78104
 public void test090() {
@@ -2922,12 +2936,7 @@ public void test090() {
 			"}",
 		},
 		"----------\n" +
-		"1. ERROR in X.java (at line 4)\n" +
-		"	ints = ints.clone();\n" +
-		"	       ^^^^^^^^^^^^\n" +
-		"Type mismatch: cannot convert from Object to int[]\n" +
-		"----------\n" +
-		"2. ERROR in X.java (at line 6)\n" +
+		"1. ERROR in X.java (at line 6)\n" +
 		"	X x = this.clone();\n" +
 		"	      ^^^^^^^^^^^^\n" +
 		"Type mismatch: cannot convert from Object to X\n" +
@@ -2946,12 +2955,7 @@ public void test091() {
 			"	}\n" +
 			"}",
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 4)\r\n" +
-		"	args = args.clone();\r\n" +
-		"	       ^^^^^^^^^^^^\n" +
-		"Type mismatch: cannot convert from Object to String[]\n" +
-		"----------\n"
+		""
 	);
 }
 // check autoboxing only enabled in 5.0 source mode
@@ -2967,12 +2971,7 @@ public void test092() {
 			"	}\n" +
 			"}\n",
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 3)\n" +
-		"	if (b) { \n" +
-		"	    ^\n" +
-		"Type mismatch: cannot convert from Boolean to boolean\n" +
-		"----------\n"
+		""
 	);
 }
 public void test093() {
@@ -3026,8 +3025,8 @@ public void test093() {
 		"----------\n" +
 		"1. ERROR in p\\X_1.java (at line 33)\n" +
 		"	f1=(f1==0.0)?1.0:f1;\n" +
-		"	   ^^^^^^^^^\n" +
-		"Incompatible operand types Float and double\n" +
+		"	   ^^^^^^^^^^^^^^^^\n" +
+		"Type mismatch: cannot convert from double to Float\n" +
 		"----------\n"
 	);
 }
@@ -3051,8 +3050,8 @@ public void test094(){
 		"----------\n" +
 		"1. ERROR in X.java (at line 4)\n" +
 		"	()\n" +
-		"	^^\n" +
-		"Syntax error on tokens, delete these tokens\n" +
+		"	^\n" +
+		"Syntax error on token \"(\", AnnotationName expected before this token\n" +
 		"----------\n");
 }
 
@@ -3083,12 +3082,7 @@ public void test095(){
 			"  }\n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 15)\n" +
-		"	J j = (J) i;\n" +
-		"	      ^^^^^\n" +
-		"Cannot cast from I to J\n" +
-		"----------\n");
+		"");
 }
 /*
  * https://bugs.eclipse.org/bugs/show_bug.cgi?id=47074
@@ -3117,12 +3111,7 @@ public void test096() {
 			"    }\n" +
 			"}"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 17)\n" +
-		"	C c = (C)a; //COMPILER ERROR\n" +
-		"	      ^^^^\n" +
-		"Cannot cast from X.A to X.C\n" +
-		"----------\n");
+		"");
 }
 //https://bugs.eclipse.org/bugs/show_bug.cgi?id=79396
 public void test097() {
@@ -3153,7 +3142,7 @@ public void test097() {
 			"    static X Root = null;\n" +
 			"}\n"
 		},
-		"");
+		"[X2]");
 }
 //https://bugs.eclipse.org/bugs/show_bug.cgi?id=78906
 public void test098() {
@@ -3180,12 +3169,7 @@ public void test098() {
 			"	}\n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 6)\n" +
-		"	String this$0;\n" +
-		"	       ^^^^^^\n" +
-		"Duplicate field X.Y.this$0\n" +
-		"----------\n");
+		"");
 }
 //https://bugs.eclipse.org/bugs/show_bug.cgi?id=77349
 public void test099() {
@@ -3199,10 +3183,10 @@ public void test099() {
 			"}\n"
 		},
 		"----------\n" +
-		"1. WARNING in I.java (at line 3)\n" +
+		"1. ERROR in I.java (at line 3)\n" +
 		"	Object bar(I i) throws CloneNotSupportedException { return i.clone(); }\n" +
-		"	                                                           ^^^^^^^^^\n" +
-		"Access to enclosing method clone() from the type Object is emulated by a synthetic accessor method\n" +
+		"	                                                             ^^^^^\n" +
+		"The method clone() is undefined for the type I\n" +
 		"----------\n",
 		null,
 		true,
@@ -3224,15 +3208,10 @@ public void test100() {
 			"}\n"
 		},
 		"----------\n" +
-		"1. ERROR in X.java (at line 2)\n" +
+		"1. WARNING in X.java (at line 4)\n" +
 		"	int \\ud800\\udc05\\ud800\\udc04\\ud800\\udc03\\ud800\\udc02\\ud800\\udc01\\ud800\\udc00;\n" +
-		"	    ^^^^^^\n" +
-		"Invalid unicode\n" +
-		"----------\n" +
-		"2. ERROR in X.java (at line 4)\n" +
-		"	int \\ud800\\udc05\\ud800\\udc04\\ud800\\udc03\\ud800\\udc02\\ud800\\udc01\\ud800\\udc00;\n" +
-		"	    ^^^^^^\n" +
-		"Invalid unicode\n" +
+		"	    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+		"The local variable \ud800\udc05\ud800\udc04\ud800\udc03\ud800\udc02\ud800\udc01\ud800\udc00 is hiding a field from type X\n" +
 		"----------\n"
 	);
 }
@@ -3252,27 +3231,7 @@ public void test101() {
 			"	}\n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 2)\n" +
-		"	Character c0 = \'a\';\n" +
-		"	               ^^^\n" +
-		"Type mismatch: cannot convert from char to Character\n" +
-		"----------\n" +
-		"2. ERROR in X.java (at line 5)\n" +
-		"	c1 = \'b\';\n" +
-		"	     ^^^\n" +
-		"Type mismatch: cannot convert from char to Character\n" +
-		"----------\n" +
-		"3. ERROR in X.java (at line 7)\n" +
-		"	Character c2 = \'c\';\n" +
-		"	               ^^^\n" +
-		"Type mismatch: cannot convert from char to Character\n" +
-		"----------\n" +
-		"4. ERROR in X.java (at line 8)\n" +
-		"	Character[] c3 = { \'d\' };\n" +
-		"	                   ^^^\n" +
-		"Type mismatch: cannot convert from char to Character\n" +
-		"----------\n"
+		""
 	);
 }
 //https://bugs.eclipse.org/bugs/show_bug.cgi?id=108856
@@ -3294,7 +3253,7 @@ public void test102() {
 			"	}\n" +
 			"}\n"
 		},
-		"X$2");
+		"X$1$1");
 }
 public void test103() throws Exception {
 	this.runConformTest(
@@ -3317,53 +3276,34 @@ public void test103() throws Exception {
 			"\n",
 			ClassFileBytesDisassembler.DETAILED);
 
-	String expectedOutput =
-		"// Compiled from X.java (version 1.1 : 45.3, super bit)\n" +
-		"public class X {\n" +
-		"  \n" +
-		"  // Field descriptor #6 Ljava/lang/Class;\n" +
-		"  static synthetic java.lang.Class class$0;\n" +
-		"  \n" +
-		"  // Method descriptor #9 ()V\n" +
-		"  // Stack: 1, Locals: 1\n" +
-		"  public X();\n" +
-		"    0  aload_0 [this]\n" +
-		"    1  invokespecial java.lang.Object() [11]\n" +
-		"    4  return\n" +
-		"      Line numbers:\n" +
-		"        [pc: 0, line: 1]\n" +
-		"      Local variable table:\n" +
-		"        [pc: 0, pc: 5] local: this index: 0 type: X\n" +
-		"  \n" +
-		"  // Method descriptor #18 ([Ljava/lang/String;)V\n" +
-		"  // Stack: 3, Locals: 1\n" +
-		"  public static void main(java.lang.String[] args);\n" +
-		"     0  getstatic java.lang.System.out : java.io.PrintStream [19]\n" +
-		"     3  getstatic X.class$0 : java.lang.Class [25]\n" +
-		"     6  dup\n" +
-		"     7  ifnonnull 35\n" +
-		"    10  pop\n" +
-		"    11  ldc <String \"X\"> [27]\n" +
-		"    13  invokestatic java.lang.Class.forName(java.lang.String) : java.lang.Class [28]\n" +
-		"    16  dup\n" +
-		"    17  putstatic X.class$0 : java.lang.Class [25]\n" +
-		"    20  goto 35\n" +
-		"    23  new java.lang.NoClassDefFoundError [34]\n" +
-		"    26  dup_x1\n" +
-		"    27  swap\n" +
-		"    28  invokevirtual java.lang.Throwable.getMessage() : java.lang.String [36]\n" +
-		"    31  invokespecial java.lang.NoClassDefFoundError(java.lang.String) [42]\n" +
-		"    34  athrow\n" +
-		"    35  invokevirtual java.io.PrintStream.print(java.lang.Object) : void [45]\n" +
-		"    38  return\n" +
-		"      Exception Table:\n" +
-		"        [pc: 11, pc: 16] -> 23 when : java.lang.ClassNotFoundException\n" +
-		"      Line numbers:\n" +
-		"        [pc: 0, line: 3]\n" +
-		"        [pc: 38, line: 4]\n" +
-		"      Local variable table:\n" +
-		"        [pc: 0, pc: 39] local: args index: 0 type: java.lang.String[]\n" +
-		"}";
+	String expectedOutput =	"""
+		// Compiled from X.java (version 1.8 : 52.0, super bit)
+		public class X {
+		 \s
+		  // Method descriptor #6 ()V
+		  // Stack: 1, Locals: 1
+		  public X();
+		    0  aload_0 [this]
+		    1  invokespecial java.lang.Object() [8]
+		    4  return
+		      Line numbers:
+		        [pc: 0, line: 1]
+		      Local variable table:
+		        [pc: 0, pc: 5] local: this index: 0 type: X
+		 \s
+		  // Method descriptor #15 ([Ljava/lang/String;)V
+		  // Stack: 2, Locals: 1
+		  public static void main(java.lang.String[] args);
+		    0  getstatic java.lang.System.out : java.io.PrintStream [16]
+		    3  ldc <Class X> [1]
+		    5  invokevirtual java.io.PrintStream.print(java.lang.Object) : void [22]
+		    8  return
+		      Line numbers:
+		        [pc: 0, line: 3]
+		        [pc: 8, line: 4]
+		      Local variable table:
+		        [pc: 0, pc: 9] local: args index: 0 type: java.lang.String[]
+		}""";
 
 	int index = actualOutput.indexOf(expectedOutput);
 	if (index == -1 || expectedOutput.length() == 0) {
@@ -3400,7 +3340,7 @@ public void test104() {
 			"	}\n" +
 			"}"
 		},
-		"class X$1$Y X$1$Y");
+		"class X$1$1$1Y X$1$1$1Y");
 }
 
 // enclosing instance - note that the behavior is different in 1.5
@@ -3428,12 +3368,7 @@ public void test105() {
 			"    void foo(Y p) { }\n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 13)\n" +
-		"	foo(p);\n" +
-		"	^^^^^^\n" +
-		"No enclosing instance of the type X is accessible in scope\n" +
-		"----------\n");
+		"");
 }
 //https://bugs.eclipse.org/bugs/show_bug.cgi?id=79798
 public void test106() {
@@ -3457,12 +3392,7 @@ public void test106() {
 			"interface IandJ extends I, J {}\n" +
 			"class K implements IandJ { public void m() throws ZipException { } }"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 6)\n" +
-		"	ij.m();\n" +
-		"	^^^^^^\n" +
-		"Unhandled exception type IOException\n" +
-		"----------\n");
+		"");
 }
 //https://bugs.eclipse.org/bugs/show_bug.cgi?id=79798
 public void test107() {
@@ -3485,17 +3415,12 @@ public void test107() {
 			"}"
 		},
 		"----------\n" +
-		"1. ERROR in X.java (at line 4)\n" +
-		"	c.xyz();\n" +
-		"	^^^^^^^\n" +
-		"Unhandled exception type AException\n" +
-		"----------\n" +
-		"2. WARNING in X.java (at line 7)\n" +
+		"1. WARNING in X.java (at line 7)\n" +
 		"	class AException extends Exception { }\n" +
 		"	      ^^^^^^^^^^\n" +
 		"The serializable class AException does not declare a static final serialVersionUID field of type long\n" +
 		"----------\n" +
-		"3. WARNING in X.java (at line 8)\n" +
+		"2. WARNING in X.java (at line 8)\n" +
 		"	class BException extends Exception { }\n" +
 		"	      ^^^^^^^^^^\n" +
 		"The serializable class BException does not declare a static final serialVersionUID field of type long\n" +
